tests/ui/impl-trait/impl-fn-predefined-lifetimes.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/impl-fn-predefined-lifetimes.rs:5:9
   |
LL |     |x| x
   |         ^ this generic parameter must be used with a generic lifetime parameter

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/impl-fn-predefined-lifetimes.rs:5:9
   |
LL |     |x| x
   |         ^ this generic parameter must be used with a generic lifetime parameter
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
